# file-insights-platform

./: .env.example  .gitignore  .pdm-python  AGENT.md  Dockerfile  README.md  pyproject.toml  seed_data.py
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/app/: __init__.py  main.py
apps/api/app/adapters/: __init__.py  dynamodb_adapter.py  s3_adapter.py
apps/api/app/api/: __init__.py
apps/api/app/api/routes/: __init__.py  auth_routes.py  upload_routes.py
apps/api/app/controllers/: __init__.py  upload_controller.py
apps/api/app/core/: config.py  exceptions.py  logging_config.py  security.py
apps/api/app/decorators/: guard_combinations.py  guards.py  validation.py
apps/api/app/middleware/: __init__.py  auth.py
apps/api/app/models/: __init__.py  upload.py  user.py
apps/api/app/services/: __init__.py  upload_service.py
apps/web/: package.json
apps/web/src/: App.tsx
apps/workers/: README.md  __init__.py  ai_client.py  base_worker.py  video_summary_handler.py  worker_main.py
apps/workers/adapters/: rabbit_worker.py  sqs_worker.py
infrastructure/cloudformation/: enhanced-file-insights-stack.yaml
tests/: conftest.py
tests/apps/api/auth/: test_auth_routes.py
tests/apps/api/uploads/: test_upload_routes.py  test_upload_routes_extended.py
tests/integration/: test_auth_flow.py  test_upload_flow.py
